--- a/index.html
+++ b/index.html
@@ -17,4 +17,4 @@ layout: default
   {% endfor %}
 </div>
 
-<h3 class="title"><a href="{{ site.baseurl }}/previous_posts/">Previous Posts</a></h3>
+<h3 class="all-posts-link"><a href="{{ site.baseurl }}/all_posts/">All Posts</a></h3>
