--- a/all_posts/index.html
+++ b/all_posts/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: All Posts
 ---
-<h2 class="all-posts-title">{{ page.title }}</h2>
+<h2>{{ page.title }}</h2>
 
 <div class="posts">
   {% for post in site.posts %}
