restore forward slashes to all_posts href

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@ layout: default
   {% endfor %}
 </div>
 
-<h3 class="all-posts-link"><a href="{{ site.url }}all_posts" target="_parent">
+<h3 class="all-posts-link"><a href="{{ site.url }}/all_posts/" target="_parent">
   <i class="fa fa-history"></i> All Posts</a>
 </h3>
